# social-media-news-bot

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  changelog.txt  docker-compose.yaml  readme.md
bot/: Cargo.toml
bot/docker/: Dockerfile
bot/src/: bluesky.rs  cli.rs  main.rs  mastodon.rs  platforms.rs  token.rs
bot/src/bluesky/: atproto.rs  token.rs
bot/src/mastodon/: api.rs
infrastructure/: Cargo.toml  readme.md
infrastructure/src/: lib.rs  redis.rs
playbook/: inventory.ini  playbook.yaml  readme.md  variables.yaml
playbook/templates/: compose.yaml.j2
post/: Cargo.toml  readme.md
post/src/: lib.rs
scraper/: Cargo.toml  readme.md
scraper/docker/: Dockerfile
scraper/src/: main.rs  scraper.rs
scraper/src/targets/: gfourmedia.rs  hotnews.rs
scrapper/: Cargo.toml  readme.md
scrapper/docker/: Dockerfile
scrapper/src/: cli.rs  main.rs  redis.rs  redis_service.rs  scrapper.rs  targets.rs
scrapper/src/scrapper/: gfourmedia.rs  hotnews.rs
scrapper/src/targets/: gfourmedia.rs  hotnews.rs
src/: main.rs  scrapper.rs
src/scrapper/: gfourmedia.rs
synology/: docker-compose.yaml  readme.md
