[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.23", features = ["derive"] }
post = {path = "../post"}
infrastructure = { path = "../infrastructure"}
signal-hook = "0.3.17"
log = "0.4.22"
env_logger = "0.11.6"
anyhow = "1.0.95"
serde = { version = "1.0.216", features = ["derive"] }
base64 = "0.22.1"
serde_json = "1.0.134"
reqwest = { version = "0.12.11", features = ["json"] }