[package]
name = "scrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = "0.12.9"
scraper = "0.25.0"
clokwerk = "0.4.0"
log = "0.4.22"
clap = { version = "4.5.23", features = ["derive"] }
post = {path = "../post"}
infrastructure = { path = "../infrastructure"}
async-trait = "0.1.89"
md5 = "0.8.0"
